# insightpilot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/knowledge_base/: analysis_patterns.md  metrics.md  olist_business.md
docs/: code-walkthrough-qa.md  design-decisions.md  paper-plan.md  reading-guide.md
scripts/: setup_data.py
src/insight_pilot/: __init__.py  config.py  graph.py  main.py  state.py
src/insight_pilot/agents/: __init__.py  analysis.py  planner.py  query.py  reporter.py  reviewer.py
src/insight_pilot/prompts/: __init__.py  analysis.py  planner.py  query.py  reporter.py
src/insight_pilot/tools/: __init__.py  duckdb_executor.py  exemplar_store.py  knowledge_base.py  lang_tools.py  metadata_explorer.py  python_sandbox.py  sensitivity.py
tests/: conftest.py  test_duckdb_executor.py  test_metadata_explorer.py  test_state.py
