# ============================================================================
# pyproject.toml —— InsightPilot 项目元数据与依赖声明
#
# 【为什么是 pyproject.toml 而不是 setup.py + requirements.txt？】
#   PEP 621 之后 Python 官方统一了打包元数据的位置（pyproject.toml），
#   setup.py 已经在 2025 年前后几乎被淘汰。pyproject.toml 同时承担了
#   "项目元数据 + 构建配置 + 工具配置（ruff/pytest）" 的三重职责，
#   避免了过去一个项目散落十几个配置文件的尴尬。
#
# 【uv 如何读这个文件？】
#   uv 原生识别 [project] / [project.optional-dependencies] / [tool.uv]
#   三个段落。跑 `uv sync` 时，uv 会：
#     1. 读 [project.dependencies] 装核心依赖
#     2. 读 [project.optional-dependencies] 装指定的可选组（如 dev）
#     3. 生成 uv.lock 锁定版本
#     4. 创建 .venv/ 并把依赖装进去
# ============================================================================

# ---------------------------------------------------------------------------
# [build-system]：告诉 Python 这个项目该用什么工具构建
#   hatchling 是 PyPA 官方推荐的现代构建后端，比 setuptools 更轻量、
#   对 src-layout 支持更好。
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# [project]：项目核心元数据（PEP 621 标准字段）
# ---------------------------------------------------------------------------
[project]
name = "insight-pilot"
version = "0.1.0"
description = "LangGraph-based multi-agent data analysis system (interview portfolio)"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # LangGraph 0.4+ 支持 3.10+，锁到 3.11-3.12 避免生态兼容问题
authors = [
    { name = "Mira Wang", email = "mira@example.com" },
]
license = { text = "MIT" }

# ---------------------------------------------------------------------------
# 核心依赖 —— 运行时必须的包
#
# 版本策略：用 `>=X.Y` 下限 + 不锁上限，交给 uv.lock 去锁精确版本。
# 这样既保证最低可用版本，又允许 `uv sync --upgrade` 拿到新功能。
# ---------------------------------------------------------------------------
dependencies = [
    # ---- LangGraph / LangChain 生态 ----
    "langgraph>=0.4.0",              # StateGraph、interrupt()、Command(resume=...) 新 API 要 0.4+
    "langchain>=0.3.0",              # 基础抽象（BaseMessage、tool 装饰器等）
    "langchain-openai>=0.2.0",       # OpenAI Chat Model 封装（ChatOpenAI）
    "langgraph-checkpoint-sqlite>=2.0.0",  # SqliteSaver —— 第五阶段人机协同要持久化状态

    # ---- LLM 服务 ----
    "openai>=1.50.0",                # 官方 OpenAI SDK（langchain-openai 的底层依赖）

    # ---- 数据层 ----
    "duckdb>=1.0.0",                 # 分析型 SQL 引擎，模拟 Athena
    "pandas>=2.2.0",                 # Analysis Agent 的主要工具
    "pyarrow>=17.0.0",               # DuckDB 与 pandas 互转的零拷贝桥梁

    # ---- 可视化 ----
    "matplotlib>=3.9.0",             # Analysis Agent 生成图表
    "seaborn>=0.13.0",               # 更好看的默认样式

    # ---- RAG 知识库（第四阶段）----
    "chromadb>=0.5.0",               # 本地向量数据库，存业务术语/Schema 描述
    "tiktoken>=0.8.0",               # OpenAI 的 tokenizer，chromadb 嵌入时会用

    # ---- 配置与工具 ----
    "pydantic>=2.9.0",               # 结构化输出 schema 的基础（with_structured_output 依赖）
    "pydantic-settings>=2.5.0",      # config.py 用它从 .env 读配置
    "python-dotenv>=1.0.0",          # .env 文件加载

    # ---- CLI 美化（第五阶段）----
    "rich>=13.8.0",                  # 终端彩色输出、进度条、Markdown 渲染
    "typer>=0.12.0",                 # main.py 的 CLI 框架，比 argparse 更现代
]

# ---------------------------------------------------------------------------
# [project.optional-dependencies]：发布包时用户可选安装的 extras
#
# 【这里只放"运行时的可选功能"】
#   用户 `pip install insight-pilot[data]` 时才装 kagglehub。
#   dev 工具（pytest / ruff 等）不在这里 —— 它们应该在 [dependency-groups]
#   里（PEP 735），避免混进发布的包元数据。
#
# 用法：`uv sync --extra data`
# ---------------------------------------------------------------------------
[project.optional-dependencies]
# 数据准备依赖：只有初次 setup 数据时才需要
data = [
    "kagglehub>=0.3.0",              # 从 Kaggle 下载 Olist 数据集
]

# ---------------------------------------------------------------------------
# [dependency-groups]：PEP 735 的开发依赖组（2024 年标准化）
#
# 【为什么用这个而不是 [project.optional-dependencies]？】
#   - extras 会写进发布的包元数据，pytest/ruff 本来不该进用户环境
#   - dependency-groups 是纯开发概念，不影响打包
#
# 用法：`uv sync --group dev` 或 `uv sync --all-groups`
#
# 【和老的 [tool.uv].dev-dependencies 的关系】
#   老写法已在 2025 年 uv 新版本里被弃用。这里是替代品。
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.3.0",                 # 测试框架
    "pytest-cov>=5.0.0",             # 覆盖率报告
    "pytest-asyncio>=0.24.0",        # LangGraph 异步流式 API 测试会用
    "ruff>=0.7.0",                   # 一工具顶 black + isort + flake8
    "mypy>=1.11.0",                  # 类型检查（State schema 复杂，需要兜底）
    "ipykernel>=6.29.0",             # notebook demo 的内核
]

# ---------------------------------------------------------------------------
# [project.scripts]：装包后可用的命令行入口
#
# 装好后可以直接 `insight-pilot ...`，不用 `python -m insight_pilot.main ...`
# ---------------------------------------------------------------------------
[project.scripts]
insight-pilot = "insight_pilot.main:app"

# ---------------------------------------------------------------------------
# [tool.hatch.build.targets.wheel]：告诉 hatchling 代码在 src/ 下
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/insight_pilot"]

# ---------------------------------------------------------------------------
# [tool.ruff]：代码风格 + lint 配置
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100                    # 100 比默认 88 更适合中文注释
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# 启用的规则集：E/F = pyflakes+pycodestyle，I = isort，B = bugbear，UP = pyupgrade
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501",   # 行太长 —— 让格式化器管，不让 lint 管
    "N806",   # 函数内变量应该小写 —— pandas 习惯用大写 DataFrame 变量
]

[tool.ruff.format]
quote-style = "double"               # 统一用双引号

# ---------------------------------------------------------------------------
# [tool.pytest.ini_options]：测试配置
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts：默认加的命令行参数
#   -v：详细输出
#   --tb=short：异常栈简短显示
#   --strict-markers：禁止使用未声明的 pytest marker（防打错字）
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that need DuckDB data",
]

# ---------------------------------------------------------------------------
# [tool.mypy]：类型检查配置
#   第一阶段先宽松一点，后面 Agent 多了再收紧
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true        # langgraph 等第三方库 stub 不完整，先忽略
